--- a/index.html
+++ b/index.html
@@ -487,16 +487,16 @@
 
             <script>
                 let swiper1 = new Swiper(".scroll-list", {
-                    slidesPerView: 1.2,
+                    slidesPerView: 2.2,
                     spaceBetween: 14,
                     autoHeight: true,
                     breakpoints: {
                         768: {
-                        slidesPerView: 1.2,
-                        spaceBetween: 14,
+                        slidesPerView: 3.2,
+                        spaceBetween: 18,
                         },
                         1024: {
-                            slidesPerView: 3.2,
+                            slidesPerView: 4.2,
                             spaceBetween: 18,
                         },
                         1460: {
@@ -523,16 +523,22 @@
                         <li class="swiper-slide popuplist">
                             <a href="#">
                                 <img class="pc_banner" src="./resource/main/main_popup/popup_1.png" alt="베스트 리뷰 이벤트">
+                                <img class="tab_banner" src="./resource/main/main_popup/popup_1_tab.jpg" alt="베스트 리뷰 이벤트">
+                                <img class="mo_banner" src="./resource/main/main_popup/popup_1_mo.jpg" alt="베스트 리뷰 이벤트">
                             </a>
                         </li>
                         <li class="swiper-slide popuplist">
                             <a href="#">
-                                <img src="./resource/main/main_popup/popup_2.png" alt="쇼핑백 증정">
+                                <img class="pc_banner" src="./resource/main/main_popup/popup_2.png" alt="쇼핑백 증정">
+                                <img class="tab_banner" src="./resource/main/main_popup/popup_2_tab.jpg" alt="쇼핑백 증정">
+                                <img class="mo_banner" src="./resource/main/main_popup/popup_2_mo.jpg" alt="쇼핑백 증정">
                             </a>
                         </li>
                         <li class="swiper-slide popuplist">
                             <a href="#">
-                                <img src="./resource/main/main_popup/popup_3.png" alt="온라인몰 전용 상품 최대 30% 세일">
+                                <img class="pc_banner" src="./resource/main/main_popup/popup_3.png" alt="온라인몰 전용 상품 최대 30% 세일">
+                                <img class="tab_banner" src="./resource/main/main_popup/popup_3_tab.jpg" alt="온라인몰 전용 상품 최대 30% 세일">
+                                <img class="mo_banner" src="./resource/main/main_popup/popup_3_mo.jpg" alt="온라인몰 전용 상품 최대 30% 세일">
                             </a>
                         </li>
                     </ul>
@@ -550,6 +556,7 @@
                             el: ".swiper-pagination",
                             clickable: true,
                             },
+                        autoHeight:true
                         
                         });
                 </script>
@@ -565,27 +572,37 @@
                 <ul class="swiper-wrapper bannerarea">
                     <li class="swiper-slide subbanner">
                         <a href="#">
-                            <img src="./resource/main/main_banner/banner_1.png" alt="퓨어컬러 익스플리시트 실크 매트 립스틱 배너 - 바로가기">
+                            <img class="pc_banner" src="./resource/main/main_banner/banner_1.png" alt="퓨어컬러 익스플리시트 실크 매트 립스틱 배너 - 바로가기">
+                            <img class="tab_banner" src="./resource/main/main_banner//banner_1_tab.jpg" alt="퓨어컬러 익스플리시트 실크 매트 립스틱 배너 - 바로가기">
+                            <img class="mo_banner" src="./resource/main/main_banner/banner_1_mo.jpg" alt="퓨어컬러 익스플리시트 실크 매트 립스틱 배너 - 바로가기">
                         </a>
                     </li>
                     <li class="swiper-slide subbanner">
                         <a href="#">
-                            <img src="./resource/main/main_banner/banner_2.png" alt="퓨어컬러 젤리 글로우 밤 배너 - 바로가기">
+                            <img class="pc_banner" src="./resource/main/main_banner/banner_2.png" alt="퓨어컬러 젤리 글로우 밤 배너 - 바로가기">
+                            <img class="tab_banner" src="./resource/main/main_banner/banner_2_tab.jpg" alt="퓨어컬러 젤리 글로우 밤 배너 - 바로가기">
+                            <img class="mo_banner" src="./resource/main/main_banner/banner_2_mo.jpg" alt="퓨어컬러 젤리 글로우 밤 배너 - 바로가기">
                         </a>
                     </li>
                     <li class="swiper-slide subbanner">
                         <a href="#">
-                            <img src="./resource/main/main_banner/banner_3.png" alt="리-뉴트리뷰 래디언스 UV 플루이드 배너 - 바로가기">
+                            <img class="pc_banner" src="./resource/main/main_banner/banner_3.png" alt="리-뉴트리뷰 래디언스 UV 플루이드 배너 - 바로가기">
+                            <img class="tab_banner" src="./resource/main/main_banner/banner_3_tab.jpg" alt="리-뉴트리뷰 래디언스 UV 플루이드 배너 - 바로가기">
+                            <img class="mo_banner" src="./resource/main/main_banner/banner_3_mo.jpg" alt="리-뉴트리뷰 래디언스 UV 플루이드 배너 - 바로가기">
                         </a>
                     </li>
                     <li class="swiper-slide subbanner">
                         <a href="#">
-                            <img src="./resource/main/main_banner/banner_4.jpg" alt="텐더 화이트 향수 배너 - 바로가기">
+                            <img class="pc_banner" src="./resource/main/main_banner/banner_4.jpg" alt="텐더 화이트 향수 배너 - 바로가기">
+                            <img class="tab_banner" src="./resource/main/main_banner/banner_4_tab.jpg" alt="텐더 화이트 향수 배너 - 바로가기">
+                            <img class="mo_banner" src="./resource/main/main_banner/banner_4_mo.jpg" alt="텐더 화이트 향수 배너 - 바로가기">
                         </a>
                     </li>
                     <li class="swiper-slide subbanner">
                         <a href="#">
-                            <img src="./resource/main/main_banner/banner_5.jpg" alt="더블웨어 제로 스머징 랭스 마스카라 배너 - 바로가기">
+                            <img class="pc_banner" src="./resource/main/main_banner/banner_5.jpg" alt="더블웨어 제로 스머징 랭스 마스카라 배너 - 바로가기">
+                            <img class="tab_banner" src="./resource/main/main_banner/banner_5_tab.jpg" alt="더블웨어 제로 스머징 랭스 마스카라 배너 - 바로가기">
+                            <img class="mo_banner" src="./resource/main/main_banner/banner_5_mo.jpg" alt="더블웨어 제로 스머징 랭스 마스카라 배너 - 바로가기">
                         </a>
                     </li>
                 </ul>
@@ -595,14 +612,15 @@
                 var swiper3 = new Swiper(".sub-banner", {
                     spaceBetween: 20,
                     centeredSlides: true,
-                    autoplay: {
-                        delay: 2500,
-                        disableOnInteraction: false,
-                    },
+                    // autoplay: {
+                    //     delay: 2500,
+                    //     disableOnInteraction: false,
+                    // },
                     pagination: {
                         el: ".swiper-pagination",
                         clickable: true,
                     },
+                    autoHeight:true
                 });
             </script>
          </div>
@@ -670,9 +688,23 @@
             </div>
             <script>
                 let swiper4 = new Swiper(".new", {
-                    slidesPerView: 3.5,
-                    spaceBetween: 20,
+                    slidesPerView: 2.2,
+                    spaceBetween: 14,
                     autoHeight: true,
+                    breakpoints: {
+                        768: {
+                        slidesPerView: 3.2,
+                        spaceBetween: 14,
+                        },
+                        1024: {
+                            slidesPerView: 4.2,
+                            spaceBetween: 18,
+                        },
+                        1460: {
+                        slidesPerView: 4.2,
+                        spaceBetween: 20,
+                        },
+                    },
                 });
             </script>
 
@@ -792,9 +824,23 @@
             </div>
             <script>
                 let swiper5 = new Swiper(".review", {
-                    slidesPerView: 3.5,
-                    spaceBetween: 20,
+                    slidesPerView: 2,
+                    spaceBetween: 14,
                     autoHeight: true,
+                    breakpoints: {
+                        768: {
+                        slidesPerView: 2,
+                        spaceBetween: 14,
+                        },
+                        1024: {
+                            slidesPerView: 3,
+                            spaceBetween: 18,
+                        },
+                        1460: {
+                        slidesPerView: 4,
+                        spaceBetween: 20,
+                        },
+                    },
                 });
             </script>
 
@@ -826,7 +872,7 @@
                     </a>
                     <section class="address">
                         <p>이엘씨에이한국(유) 대표 Jean-Alexandre Havard, 서울시 강남구 강남대로 382(역삼동) 메리츠 타워 9층, 06232. 사업자등록번호: 211-81-71889</p>
-                        <p>고객관리지원팀 1644-3728 | 호스팅서비스 사업자: ㈜엘지유플러스 | 통신판매업신고: 강남 15737호</p>
+                        <p class="ad_last">고객관리지원팀 1644-3728 | 호스팅서비스 사업자: ㈜엘지유플러스 | 통신판매업신고: 강남 15737호</p>
                     </section>
                 </div>
                 <div class="footer-gnb">
