--- a/bestseller.html
+++ b/bestseller.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="./css/footer.css">
 
     <!-- 개별스타일 -->
-    <link rel="stylesheet" href="./css/new.css">
+    <link rel="stylesheet" href="./css/bestseller.css">
 
     <!-- swiper.js -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"/>
