--- a/order/order-form.html
+++ b/order/order-form.html
@@ -482,10 +482,10 @@
                                         <label for="order-address" class="text"><h4>주소</h4></label>
                                         <div class="grop-ver">
                                             <div class="grop-hor">
-                                                <input type="text" id="order-address" name="order-address" class="address-box" readonly>
+                                                <input type="text" id="order-address" name="order-address" class="address-box" required>
                                                 <button type="button" class="btn-check address-check">주소찾기</button>
                                             </div>
-                                            <input type="text" name="order-address-detail" class="address-box address-box-detail" placeholder="상세주소" required>
+                                            <input type="text" name="order-address-detail" class="address-box-detail" placeholder="상세주소" required>
                                         </div>
                                     </div>
                                     <div class="form-grop">
