--- a/skincare/cleaner-toner.html
+++ b/skincare/cleaner-toner.html
@@ -408,12 +408,14 @@
     <main>
         <div class="hero-banner">
             <a href="#">
-                <img src="../resource/skincare/skincare_herobanner.png" alt="어드밴스드 오버나이트 트리트먼트 배너 - 바로가기">
+                <img class="pc_banner" src="../resource/skincare/skincare_herobanner.png" alt="어드밴스드 오버나이트 트리트먼트 배너 - 바로가기">
+                <img class="tab_banner" src="../resource/skincare/skincare_herobanner_tab.jpg" alt="어드밴스드 오버나이트 트리트먼트 배너 - 바로가기">
+                <img class="mo_banner" src="../resource/skincare/skincare_herobanner_mo.jpg" alt="어드밴스드 오버나이트 트리트먼트 배너 - 바로가기">
             </a>
         </div>
 
         <div class="common-frame">
-            <div class="list">
+            <div class="list slider-container">
                 <ul>
                     <li id="all"><a href="./skincare.html">ALL</a></li>
                     <li id="ct"><a href="./cleaner-toner.html">클렌저 / 토너</a></li>
