--- a/order/order-shopping-cart.html
+++ b/order/order-shopping-cart.html
@@ -402,11 +402,11 @@
         <div class="common_frame">
             <h1 class="pf">order</h1>
             <ol>
-                <li class="act"><em>step1</em><strong>장바구니</strong></li>
+                <li class="act"><span>step1</span><strong>장바구니</strong></li>
                 <li class="arrow"></li>
-                <li><em>step2</em><strong>주문서 작성</strong></li>
+                <li><span>step2</span><strong>주문서 작성</strong></li>
                 <li class="arrow"></li>
-                <li><em>step3</em><strong>주문완료</strong></li>
+                <li><span>step3</span><strong>주문완료</strong></li>
             </ol>
             <div class="order-content-wrapper">
                 <table class="oreder-list">
@@ -430,7 +430,7 @@
                             </td>
                             <td>
                                 <div class="product">
-                                    <figure><img src="../resource/order/order-finsh/Revitalizing Supreme.jpg" alt="evitalizing Supreme+ 리바이탈라이징 수프림 플러스 나이트 파워 바운스 크림 이미지"></figure>
+                                    <figure><img src="../resource/order/shopping-cart/oreder_cart.jpg" alt="더블웨어 세컨 스킨 블러 쿠션 이미지"></figure>
                                     <div class="product-details">
                                         <div class="product-name">
                                             <p>Double Wear</p>
@@ -456,7 +456,7 @@
                             </td>
                             <td>
                                 <div class="product">
-                                    <figure><img src="../resource/order/order-finsh/Revitalizing Supreme.jpg" alt="evitalizing Supreme+ 리바이탈라이징 수프림 플러스 나이트 파워 바운스 크림 이미지"></figure>
+                                    <figure><img src="../resource/order/shopping-cart/oreder_cart.jpg" alt="더블웨어 세컨 스킨 블러 쿠션 이미지"></figure>
                                     <div class="product-details">
                                         <div class="product-name">
                                             <p>Double Wear</p>
@@ -482,7 +482,7 @@
                             </td>
                             <td>
                                 <div class="product">
-                                    <figure><img src="../resource/order/order-finsh/Revitalizing Supreme.jpg" alt="evitalizing Supreme+ 리바이탈라이징 수프림 플러스 나이트 파워 바운스 크림 이미지"></figure>
+                                    <figure><img src="../resource/order/shopping-cart/oreder_cart.jpg" alt="더블웨어 세컨 스킨 블러 쿠션 이미지"></figure>
                                     <div class="product-details">
                                         <div class="product-name">
                                             <p>Double Wear</p>
@@ -508,85 +508,7 @@
                             </td>
                             <td>
                                 <div class="product">
-                                    <figure><img src="../resource/order/order-finsh/Revitalizing Supreme.jpg" alt="evitalizing Supreme+ 리바이탈라이징 수프림 플러스 나이트 파워 바운스 크림 이미지"></figure>
-                                    <div class="product-details">
-                                        <div class="product-name">
-                                            <p>Double Wear</p>
-                                            <p>더블웨어 세컨 스킨 블러 쿠션</p>
-                                        </div>
-                                        <p class="color-info">색상: 1W2 샌드</p>
-                                        <p class="quantity-info">수량: 1</p>
-                                        <h4 class="price">₩234,000</h4>
-                                    </div>
-                                </div>
-                            </td>
-                            <td class="quantity-col">1</td>
-                            <td class="price-col"><h4>₩103,000</h4></td>
-                            <td><figure><img src="../resource/order/shopping-cart/x_icon.svg" alt="제품 삭제"></figure></td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <form action="">
-                                    <fieldset>
-                                        <input type="checkbox" class="product-checkbox">
-                                    </fieldset>
-                                </form>
-                            </td>
-                            <td>
-                                <div class="product">
-                                    <figure><img src="../resource/order/order-finsh/Revitalizing Supreme.jpg" alt="evitalizing Supreme+ 리바이탈라이징 수프림 플러스 나이트 파워 바운스 크림 이미지"></figure>
-                                    <div class="product-details">
-                                        <div class="product-name">
-                                            <p>Double Wear</p>
-                                            <p>더블웨어 세컨 스킨 블러 쿠션</p>
-                                        </div>
-                                        <p class="color-info">색상: 1W2 샌드</p>
-                                        <p class="quantity-info">수량: 1</p>
-                                        <h4 class="price">₩234,000</h4>
-                                    </div>
-                                </div>
-                            </td>
-                            <td class="quantity-col">1</td>
-                            <td class="price-col"><h4>₩103,000</h4></td>
-                            <td><figure><img src="../resource/order/shopping-cart/x_icon.svg" alt="제품 삭제"></figure></td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <form action="">
-                                    <fieldset>
-                                        <input type="checkbox" class="product-checkbox">
-                                    </fieldset>
-                                </form>
-                            </td>
-                            <td>
-                                <div class="product">
-                                    <figure><img src="../resource/order/order-finsh/Revitalizing Supreme.jpg" alt="evitalizing Supreme+ 리바이탈라이징 수프림 플러스 나이트 파워 바운스 크림 이미지"></figure>
-                                    <div class="product-details">
-                                        <div class="product-name">
-                                            <p>Double Wear</p>
-                                            <p>더블웨어 세컨 스킨 블러 쿠션</p>
-                                        </div>
-                                        <p class="color-info">색상: 1W2 샌드</p>
-                                        <p class="quantity-info">수량: 1</p>
-                                        <h4 class="price">₩234,000</h4>
-                                    </div>
-                                </div>
-                            </td>
-                            <td class="quantity-col">1</td>
-                            <td class="price-col"><h4>₩103,000</h4></td>
-                            <td><figure><img src="../resource/order/shopping-cart/x_icon.svg" alt="제품 삭제"></figure></td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <form action="">
-                                    <fieldset>
-                                        <input type="checkbox" class="product-checkbox">
-                                    </fieldset>
-                                </form>
-                            </td>
-                            <td>
-                                <div class="product">
-                                    <figure><img src="../resource/order/order-finsh/Revitalizing Supreme.jpg" alt="evitalizing Supreme+ 리바이탈라이징 수프림 플러스 나이트 파워 바운스 크림 이미지"></figure>
+                                    <figure><img src="../resource/order/shopping-cart/oreder_cart.jpg" alt="더블웨어 세컨 스킨 블러 쿠션 이미지"></figure>
                                     <div class="product-details">
                                         <div class="product-name">
                                             <p>Double Wear</p>
