--- a/order/order-finsh.html
+++ b/order/order-finsh.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="../css/order/order-finsh.css">
 
     <script src="../js/header_smart.js"></script>
+    <script src="../js/order/order-finsh.js"></script>
 </head>
 <body>
     <header>
@@ -399,11 +400,11 @@
         <div class="common_frame">
             <h1 class="pf">order</h1>
             <ol>
-                <li><em>step1</em><strong>장바구니</strong></li>
+                <li><span>step1</span><strong>장바구니</strong></li>
                 <li class="arrow"></li>
-                <li><em>step2</em><strong>주문서 작성</strong></li>
+                <li><span>step2</span><strong>주문서 작성</strong></li>
                 <li class="arrow"></li>
-                <li class="act"><em>step3</em><strong>주문완료</strong></li>
+                <li class="act"><span>step3</span><strong>주문완료</strong></li>
             </ol>
             <h2>주문이 완료되었습니다.</h2>
             <table class="oreder-list">
