공식몰서비스 진행중

--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estee Lauder</title>
+    <title>Estee Lauder - </title>
     <!-- 검색 최적화 소스코드(SEO) -->
     <meta name="description" content="에스티 로더 공식 온라인 스토어. 어드밴스드 나이트 리페어, 더블웨어 파운데이션 등 프리미엄 스킨케어와 메이크업 제품을 만나보세요.">
     <meta name="keywords" content="에스티로더, 에스티 로더, Estee Lauder, 어드밴스드 나이트 리페어, 더블웨어, 스킨케어, 메이크업, 화장품, 럭셔리 뷰티, 안티에이징">
@@ -207,15 +207,80 @@
     </header>
     
     <main>
-        <div class="common_frame hero">
+        <div class="common_frame">
             <div class="title">
                 <h1>Estee Today Experience</h1>
                 <p>에스티 로더에서 제공하는 전문적인 서비스를 통해 고객님만의 진정한 아름다움을 찾으세요</p>
             </div>
+            <ul class="menu">
+                <li>
+                    <h4>딥 리페어 나이트 페이셜</h4>
+                    <p>상담을 통해 고객 맞춤 스킨케어 제품을 추천하고, 해당 제품을 사용하여 피부 본연의 힘을 강화하는 마사지 서비스</p>
+                    <p>15분</p>
+                </li>
+                <li>
+                    <h4>인스턴트 메이크업 트랜스포메이션</h4>
+                    <p>상상담을 통해 고객 맞춤 피부 표현 제품 및 컬러를 제안하는 퀵 메이크업 서비스</p>
+                    <p>20분</p>
+                </li>
+                <li>
+                    <h4>럭셔리 넥 & 숄더 마사지</h4>
+                    <p>상담을 통한 피부 진단 후, 리-뉴트리브 라인의 제품을 사용하여 목과 어깨 근육 긴장을 풀어 스트레스를 완화해주는 넥 &숄더 마사지 서비스(마사지 서비스의 효과로서만 표현)</p>
+                    <p>20분</p>
+                </li>
+                <li>
+                    <h4>아이 스컬프팅 리추얼</h4>
+                    <p>상담을 통한 피부 진단 후, 리-뉴트리브 라인의 아이 세럼과 아이 크림의 풍부한 영양을 공급하는 아이 마사지 서비스</p>
+                    <p>20분</p>
+                </li>
+                <li>
+                    <h4>럭셔리 핸드 마사지</h4>
+                    <p>상담을 통한 피부 진단 후, 리-뉴트리브 라인의 제품을 사용하여 손의 피로를 풀어 스트레스를 완화해 주는 핸드 마사지 서비스 (마사지 서비스의 효과로서만 표현)</p>
+                    <p>20분</p>
+                </li>
+            </ul>
+            <h1>예약</h1>
+            <div class="reservation">
+                <div class="select">
+                    <div class="branch">
+                        <h2>지점 확인</h2>
+                        <form action="">
+                            <fieldset>
+                                <select name="select-branch" id="select-branch" required>
+                                    <option value="지점선택">지점 선택</option>
+                                    <option value="갤러리아압구정">갤러리아 압구정</option>
+                                    <option value="롯데동탄점">롯데 동탄점</option>
+                                    <option value="롯데본점">롯데 본점</option>
+                                    <option value="롯데잠실점">롯데 잠실점</option>
+                                    <option value="신세계강남점">신세계 강남점</option>
+                                    <option value="현대신촌점">현대 신촌점</option>
+                                    <option value="현대압구정본점">현대 압구정 본점</option>
+                                    <option value="현대천호점">현대 천호점</option>
+                                    <option value="현대판교점">현대 판교점</option>
+                                </select>
+                            </fieldset>
+                        </form>
+                    </div>
+                    <div class="selct-serice">
+                        <h2>서비스 선택</h2>
+                        <form action="">
+                            <fieldset>
+                                <select name="select-serice" id="select-serice" required>
+                                    <option value="지점선택">서비스 선택</option>
+                                    <option value="갤러리아압구정">딥 리페어 나이트 페이셜</option>
+                                    <option value="롯데동탄점">인스턴트 메이크업  트랜스포메이션</option>
+                                    <option value="롯데본점">럭셔리 넥 & 숄더 마사지</option>
+                                    <option value="롯데잠실점">아이 스컬프팅 리추얼</option>
+                                    <option value="신세계강남점">럭셔리 핸드 마사지</option>
+                                </select>
+                            </fieldset>
+                        </form>
+                    </div>
+                </div>
+                <div class="date"></div>
+                <div class="time"></div>
+            </div>
         </div>
-        <ul class="menu">
-            
-        </ul>
     </main>
 
     <footer>
