1106 상세페이지 수정중

--- a/makeup/lip/lip-all.html
+++ b/makeup/lip/lip-all.html
@@ -519,6 +519,6 @@
                 <p>본 페이지는 취업용도의 포트폴리오 홈페이지입니다.</p>
             </div>
     </footer>
-    <script src="../../js/makeup/lip/lip-all.js"></script>
+    <script src="/js/makeup/lip/lip-all.js"></script>
 </body>
 </html>
