--- a/brandstory/emerging.html
+++ b/brandstory/emerging.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website">
 
     <!-- fabicon(파비콘) 설정 -->
-    <link rel="icon" sizes="32x32" href="./resource/fabicon_bk.png" type="image/png">
+    <link rel="icon" sizes="32x32" href="../resource/fabicon_bk.png" type="image/png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -208,7 +208,7 @@
         </div>
     </header> 
     <main>
-        <div class="elf-title">
+        <div class="common_frame elf-title">
             <h1 class="pf">Emerging Leaders Fund</h1>
             <h2>여성들이 이끄는 미래는 어떤 모습일까요?</h2>
             <p>에스티 로더는 창립자 에스티 로더 여사의 신념처럼, 여성의 잠재력이 세상을 변화시킬 수 있다고 믿습니다.</p>
@@ -217,7 +217,7 @@
         </div>
 
         <div class="way">
-            <div class="common-frame">
+            <div class="common_frame">
                 <section>
                     <h3>#LeadYourWay</h3>
                     <p>ELEL 펀드는 여성들이 리더로서의 잠재력과 자아를 인식하고, 리더가 되기 위해 필요한 역량을 탐구하며, 진정한 리더십의 의미를 깨닫도록 장려하는 것을 목표로 합니다.</p>
@@ -230,14 +230,14 @@
         </div>
 
         <div class="doing">
-            <div class="common-frame">
+            <div class="common_frame">
                 <h3>What We're Doing</h3>
                 <p>Estée Lauder Emerging Leaders Fund의 미션은 새로운 세대의 리더를 지원하고 리더십에 대한 젠더 고정관념에 도전함으로써 리더십을 재정의하는 것입니다. 펀드는 3가지 미션에 초점을 맞추고 있습니다.</p>
             </div>
         </div>
 
         <div class="fund-cards">
-            <div class="common-frame">
+            <div class="common_frame">
                 <ul class="fund-list">
                     <li class="fund-item">
                         <div class="fund-img">
@@ -272,7 +272,7 @@
         </div>
 
         <div class="vv-program">
-            <div class="common-frame">
+            <div class="common_frame">
                 <h3>VV Visionaries 프로그램 구성</h3>
                 <p>Vital Voices의 입증된 5-포인트 리더십 모델을 기반으로 구축된 에스티 로더 경영진 및 리더의 리더십 경험들을 배울 수 있는 몰입형 가상 리더십 프로그램</p>
                 <p>해당 연도의 선별된 참가자 그룹 대상으로 개인의 리더십 여정에 대한 심층 교육 및 투자 제공</p>
