--- a/brandstory/esteelauder-story.html
+++ b/brandstory/esteelauder-story.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website">
 
     <!-- fabicon(파비콘) 설정 -->
-    <link rel="icon" sizes="32x32" href="./resource/fabicon_bk.png" type="image/png">
+    <link rel="icon" sizes="32x32" href="../resource/fabicon_bk.png" type="image/png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -217,7 +217,7 @@
             </div>
         <!-- 아름다움의 탄생 구간 -->
         <div class="bs-intro dtu">
-            <div class="common-frame">
+            <div class="common_frame">
                 <section>
                     <p class="subheading">아름다움은 타고나는 것이 아니라 만들어지는 것</p>
                     <h2>아름다움의 탄생</h2>
@@ -233,7 +233,7 @@
         </div>
          <!-- 아름다워질 수 있는 방법 구간 -->
         <div class="title dtu">
-            <div class="common-frame">
+            <div class="common_frame">
                 <section>
                     <p class="subheading">아름다움은 타고나는 것이 아니라 만들어지는 것</p>
                     <h2>아름다워질 수 있는 방법</h2>
@@ -252,7 +252,7 @@
         </div>
          <!-- 아름다움의 시작 구간 -->
         <div class="title opp dtu">
-            <div class="common-frame">
+            <div class="common_frame">
                 <section>
                     <p class="subheading">진정한 변화는 스스로의 선택에서 시작된다</p>
                     <h2>아름다움의 시작</h2>
@@ -270,7 +270,7 @@
         </div>
          <!-- 멈추지 않는 도약 구간 -->
         <div class="title dtu">
-            <div class="common-frame">
+            <div class="common_frame">
                 <section>
                     <p class="subheading">멈추지 않는 열정이 브랜드를 완성한다</p>
                     <h2>멈추지 않는 도약</h2>
@@ -288,7 +288,7 @@
         </div>
          <!-- 영원히 전설로 남을 에스티 로더 여사 구간 -->
         <div class="title opp dtu">
-            <div class="common-frame">
+            <div class="common_frame">
                 <section>
                     <p class="subheading">시간이 흘러도, 철학은 여전히 살아 있다</p>
                     <h2>영원히 전설로 남을 에스티 로더 여사</h2>
