--- a/brandstory/ingre.html
+++ b/brandstory/ingre.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website">
 
     <!-- fabicon(파비콘) 설정 -->
-    <link rel="icon" sizes="32x32" href="./resource/fabicon_bk.png" type="image/png">
+    <link rel="icon" sizes="32x32" href="../resource/fabicon_bk.png" type="image/png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -206,12 +206,12 @@
         </div>
     </header> 
     <main>
-        <div class="ic-title">
+        <div class="common_frame ic-title">
             <h1>원료 도감</h1>
             <p>여러분이 사랑하는 에스티 로더 제품에 담긴 원료에 관하여 자세히 알아보세요.<br>원료에 어떤 효능이 있는지, 원료가 어떻게 작용하는지, 원료를 어디에서 얻을 수 있는지 확인해 보세요.</p>
         </div>
         <div class="catalog">
-            <div class="common-frame">
+            <div class="common_frame ingre">
                 <article class="ic1">
                     <img src="../resource/barndstory/Catalog1.jpg" alt="비피다발효용해물 이미지">
                     <h3>비피다발효용해물</h3>
