--- a/brandstory/trend.html
+++ b/brandstory/trend.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website">
 
     <!-- fabicon(파비콘) 설정 -->
-    <link rel="icon" sizes="32x32" href="./resource/fabicon_bk.png" type="image/png">
+    <link rel="icon" sizes="32x32" href="../resource/fabicon_bk.png" type="image/png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -217,7 +217,7 @@
 <main>   
     <!-- Double wear 구간 -->
     <div class="tr-sec alt dtu">
-        <div class="common-frame">
+        <div class="common_frame">
             <section>
                 <p class="sub">9년 연속 파운데이션 1위</p>
                 <h2>Double wear</h2>
@@ -236,7 +236,7 @@
 
     <!-- 무너짐 없는 24시간 지속력 구간 -->
     <div class="tr-sec alt dtu">
-        <div class="common-frame">
+        <div class="common_frame">
             <section>
                 <p class="sub">Stay Flawless All Day</p>
                 <h2>무너짐 없는 24시간 지속력</h2>
@@ -254,7 +254,7 @@
 
     <!-- 모든 피부톤을 위한 55가지의 아름다움 구간 -->
     <div class="tr-sec dtu">
-        <div class="common-frame">
+        <div class="common_frame">
             <section>
                 <p class="sub">Find Your Perfect Shade</p>
                 <h2>모든 피부톤을 위한 55가지의 아름다움</h2>
@@ -271,7 +271,7 @@
 
     <!-- 물과 마찰에 강한 포뮬러 구간 -->
     <div class="tr-sec alt dtu">
-        <div class="common-frame">
+        <div class="common_frame">
             <section>
                 <p class="sub">Waterproof Perfection</p>
                 <h2>물과 마찰에 강한 포뮬러</h2>
@@ -288,7 +288,7 @@
     </div>
 </main>
     <footer>
-        <div class="footer-common-frame">
+        <div class="footer-common_frame">
             <div class="footer-top">
                 <div class="footer-logo">
                     <a href="../index.html">
