--- a/brandstory/vision.html
+++ b/brandstory/vision.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website">
 
     <!-- fabicon(파비콘) 설정 -->
-    <link rel="icon" sizes="32x32" href="./resource/fabicon_bk.png" type="image/png">
+    <link rel="icon" sizes="32x32" href="../resource/fabicon_bk.png" type="image/png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -217,7 +217,7 @@
     <main>
     <div class="common_frame values">
         <h1>더 아름다운 미래</h1>
-        <p>당사는 창립자인 에스티 로더 여사의 영향으로 열정적으로 여성에게 봉사하고자 합니다. 이에 당사는 효과와 함께 보답하는 고품질 제품의 개발에 전념합니다.</p>
+        <p>당사는 창립자인 에스티 로더 여사의 영향으로 열정적으로 여성에게 봉사하고자 합니다.<br>이에 당사는 효과와 함께 보답하는 고품질 제품의 개발에 전념합니다.</p>
         <div class="tabs">
             <span class="on">지속가능성</span>
             <span>시민친화성</span>
