--- a/signup/information.html
+++ b/signup/information.html
@@ -401,11 +401,11 @@
         <div class="common_frame">
             <h1>회원가입</h1>
             <ol>
-                <li class="act"><em>step1</em><strong>약관 동의</strong></li>
+                <li class="act"><span>step1</span><strong>약관 동의</strong></li>
                 <li class="arrow"></li>
-                <li><em>step2</em><strong>정보 입력</strong></li>
+                <li><span>step2</span><strong>정보 입력</strong></li>
                 <li class="arrow"></li>
-                <li><em>step3</em><strong>가입 완료</strong></li>
+                <li><span>step3</span><strong>가입 완료</strong></li>
             </ol>
             <form action="" class="sign-form">
                 <h3>입력 정보</h3>
