--- a/detail_page/lipAll_detail.html
+++ b/detail_page/lipAll_detail.html
@@ -161,8 +161,8 @@
                     </figure>
                 </div>
 
-            <div class="swiper product_fig_mo"> -->
-                <!-- <div class="swiper-wrapper detail_img">
+            <div class="swiper product_fig_mo">
+                <div class="swiper-wrapper detail_img">
                     <figure class="swiper-slide">
                         <img src="/resource/detail/new/new1/new1.jpg" alt="">
                     </figure>
